--- a/netflix-and-chill/package.json
+++ b/netflix-and-chill/package.json
@@ -2,12 +2,16 @@
   "name": "netflix",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://wadestewart/github.io/ga-dc-project-3-front-end",
   "dependencies": {
+    "gh-pages": "^1.1.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-scripts": "1.1.0"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
