--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "gh-pages": "^1.1.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
+    "react-materialize": "^1.1.2",
     "react-scripts": "1.1.0"
   },
   "scripts": {
